--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,12 @@ spring.datasource.hikari.maximum-pool-size=2
 spring.sql.init.mode=always
 spring.jpa.open-in-view=true
 hibernate.jdbc.lob.non_contextual_creation=true
+
+
+#Java spring mail setting
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=zmanhcong@gmail.com
+spring.mail.password=yuvicmycflmbheqy
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
